[package]
name = "gateau-gui"
version = "0.1.0"
description = "Manage your cookies with a crispy UI"
authors = ["Sayafdine Said <musikid@outlook.com>"]
license = "GPL-3.0"
repository = "https://github.com/musikid/gateau"
default-run = "gateau-gui"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
gateau = { path = "../../gateau" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
